# MCMC-Performance-Primitives

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/Python/: canonicalHMCSamplerGaussian.py
examples/R/arXiv_1206.1901_GRIMS/: basicHMC.r
examples/libmpp/: CMakeLists.txt  canonicalHMC.c  canonicalHMCSamplerGaussian.c
examples/mpp/: CMakeLists.txt
examples/mpp/Hamiltonian/: CMakeLists.txt  canonicalHMCSamplerCorrGaussian.cpp  canonicalHMCSamplerGaussian.cpp  canonicalHamiltonianUIGaussian.cpp  canonicalHamiltonianUIGaussianNumDef.cpp
examples/pympp/: canonicalHMCSamplerGaussian.py
libmpp/: CMakeLists.txt
libmpp/include/: CMakeLists.txt  mpp.h  mpp_impl.h
libmpp/python/: pympp.py
libmpp/src/: CMakeLists.txt  mpp_hmc.cpp  mpp_hmc_impl.cpp
mpp/: Hamiltonian  IO  UI  control  core  sampler  tempering  utils
mpp/src/Hamiltonian/: Euler.hpp  GaussKineticEnergy.hpp  canonicalHMC.hpp  leapfrog.hpp
mpp/src/IO/: writeAllParams.hpp
mpp/src/UI/: canonicalHamiltonianSampler.hpp  parallelTemperedHamiltonianSampler.hpp
mpp/src/control/: finiteSamples.hpp
mpp/src/sampler/: canonicalMCMC.hpp  canonicalSampler.hpp
mpp/src/tempering/: parallelTempering.hpp
mpp/src/utils/: GaussPotentialEnergy.hpp  randomSTD.hpp
mpppack/: CMakeLists.txt  DESCRIPTION  NAMESPACE
pympp/: CMakeLists.txt  pympp_hmc.cpp  pympp_hmc.hpp  setup.py.in  test.py
tests/: CMakeLists.txt
tests/Hamiltonian/: CMakeLists.txt  GaussKineticEnergy.cpp  canonicalHMC.cpp  leapfrog.cpp
tests/IO/: CMakeLists.txt  writeAllParams.cpp
tests/UI/: CMakeLists.txt  canonicalHamiltonianSampler.cpp  parallelTemperedHamiltonianSampler.cpp
tests/control/: CMakeLists.txt  finiteSamples.cpp
tests/libmpp/: CMakeLists.txt  mpp_hmc_diag_canon.c
tests/sampler/: CMakeLists.txt  canonicalMCMC.cpp  canonicalSampler.cpp
tests/tempering/: CMakeLists.txt  parallelTempering.cpp  parallelTemperingSampler.cpp
tests/utils/: CMakeLists.txt  GaussPotentialEnergy.cpp
